Log warning when the amount of memory the JVM has seems low.